--- a/competences.html
+++ b/competences.html
@@ -42,13 +42,13 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <H3>LANGAGES</h3>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>HTML/CSS</div>
                             <div>JavaScript</div>
                             <div>PHP</div>
                             <div>SQL</div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
@@ -77,13 +77,13 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>FRAMEWORKS / BIBLIOTHÈQUES</h3>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>Bootstrap</div>
                             <div>jQuery/jQuery UI</div>
                             <div>Angular JS</div>
                             <div>Symfony</div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
@@ -110,11 +110,11 @@
                 <div class="row">   
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>SYSTÈMES EXPLOITATION</h3>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>Windows</div>
                             <div>Linux</div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
@@ -129,10 +129,10 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>LANGUE</h3>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>Anglais</div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
@@ -144,7 +144,7 @@
                 <div class="row">     
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>OUTILS</h3>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>Ligne commande</div>
                             <div>Nano</div>
                             <div>Atom</div>
@@ -155,7 +155,7 @@
                             <div>GIMP</div> 
                             <div>Pencil</div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
