ajout cv telechargeable + opquast

--- a/formations.html
+++ b/formations.html
@@ -55,6 +55,9 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Préparation du Titre professionnel de Développeur-se logiciel (2017)<strong> Niveau III</strong></p></div>
                 </div><br>
                 <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Obtention du <a href="https://admin.opquast.com/profile/" title="certificat Opquast"> certificat OPQUAST</a> des bonnes pratiques Qualité Web<strong> Niveau Intermédiaire 630 points </strong></p></div>
+                </div><br>
+                <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>VENTE</h2></div>
                 </div>
                 <div class="row">
