--- a/competences.html
+++ b/competences.html
@@ -175,7 +175,7 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
