--- a/competences.html
+++ b/competences.html
@@ -68,12 +68,12 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
-                            <div><i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
-                        </div>    
+                        </div> 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>FRAMEWORKS / BIBLIOTHÈQUES</h3>
