--- a/competences.html
+++ b/competences.html
@@ -64,16 +64,16 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div> <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>FRAMEWORKS / BIBLIOTHÈQUES</h3>
@@ -99,15 +99,15 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
-                            <div> <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            <div> <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i></div>   
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
                         </div>
                     </div>
                 </div>
-                <div class="row">   
+                <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>SYSTÈMES EXPLOITATION</h3>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">     
+                <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>OUTILS</h3>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -152,7 +152,7 @@
                             <div>Git</div>
                             <div>GitHub/Bitbucket</div>
                             <div>LAMP/WAMP</div>
-                            <div>GIMP</div> 
+                            <div>GIMP</div>
                             <div>Pencil</div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
@@ -191,7 +191,7 @@
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                            </div>                        
+                            </div>
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
@@ -210,17 +210,17 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
-                        </div> 
-                    </div>  
+                        </div>
+                    </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h3>QUALITES PERSONNELLES</h3>
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div>Sens relationnel et écoute active</div>
                             <div>Sens commercial (vente additionnelle)</div>
                             <div>Esprit d'équipe</div>
-                        </div> 
+                        </div>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
     </body>
