--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
                     <p><strong>E-mail : </strong><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p>
                     <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/veronique-boulnois/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a><a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
-                    <p><strong><a href="img/CV.pdf" ><img src="img/cv.png" alt="CV en pdf" title="CV à télécharger"></a><img CV à télécharger ici</a></strong>
+                    <p><strong><a href="img/cv.pdf" ><img src="img/cv.png" alt="CV en pdf" title="CV à télécharger"></a><img CV à télécharger ici</a></strong>
                 </div>
             </div>
         </div>
