--- a/experiences.html
+++ b/experiences.html
@@ -45,7 +45,7 @@
                             <li><strong>2017 Développeuse Web en formation intensive et immersive 35h/semaine pendant 6 mois à <abbr title="École du Numérique du Noyonnais">E2N</abbr> à NOYON(60)</strong></li>
                             <li><strong><span>Projet e-Commerce : </span></strong><ul class="list-unstyled">
                                     <li> Création et développement d'un site e-Commerce</li>
-                                    <li>En HTLM5/CSS, Bootstrap, JavaScript, jQuery.</li> 
+                                    <li>En HTLM5/CSS, Bootstrap, JavaScript, jQuery.</li>
                                     <li>Réalisé en 3 jours en équipe de 4.</li>
                                 </ul></li>
                             <li><strong><span>Projet Quiz :</span></strong> Création, développement et mise en ligne d'un Quiz de 16 questions à l'occasion de la journée des droits des femmes</br> En HTLM5/CSS, Bootstrap, JavaScript, jQuery, PHP).</br> Réalisé en 2 jours en équipe de 9 femmes.</li>
@@ -58,10 +58,9 @@
             </div>
             <div class="row">
                 <section id='contenuProjet'>
-                    <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projets en cours</h2>
+                    <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projet en cours</h2>
                         <ul class="list-unstyled">
-                            <li>Site vitrine d'un sculpteur sur Pierre et Bois</li>
-                            <li>CV numériques</li>
+                            <li>Création d'une société proposant des ateliers numériques pour juniors et séniors</li>
                         </ul>
                     </div>
                 </section>
