--- a/formations.html
+++ b/formations.html
@@ -40,7 +40,7 @@
             </div>
             <div id="formation">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>DÉVELOPPEUSE WEB (2017)</h2></div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>DÉVELOPPEUSE WEB/METIERS DU NUMERIQUE (2017)</h2></div>
                 </div>
                 <div class="row">
                     <div class="1 col-lg-12 col-md-12 col-sm-12 col-xs-12"><p><a href="http://formation.novei.fr/" title="Ecole Numérique du Noyonnais"> E2N - Campus Inovia à Noyon (60)</a></p></div>
