--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
         <div class="container">
             <header>
-                <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>ANIMATRICE ATELIER NUMERIQUE</h2></div>
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>ANIMATRICE ATELIER NUMERIQUE</h2></div>
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <p><em>Après avoir exercé des fonctions commerciales pendant 20 ans dans divers secteurs, j'ai souhaité m'orienter vers les métiers du numériques car je suis une personne curieuse et tournée vers les nouvelles technologies. J’aime évoluer dans ce
