--- a/experiences.html
+++ b/experiences.html
@@ -60,7 +60,7 @@
                 <section id='contenuProjet'>
                     <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projet en cours</h2>
                         <ul class="list-unstyled">
-                            <li>Création d'une société proposant des ateliers numériques pour juniors et séniors</li>
+                            <li>Création d'une association proposant des ateliers numériques pour juniors et séniors</li>
                         </ul>
                     </div>
                 </section>
