--- a/experiences.html
+++ b/experiences.html
@@ -39,28 +39,34 @@
                 </div>
             </div>
             <div class="row">
-                <section id="contenuExperience">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expériences en développement</h2>
-                        <ul class="list-unstyled">
-                            <li><strong>2017 Développeuse Web en formation intensive et immersive 35h/semaine pendant 6 mois à <abbr title="École du Numérique du Noyonnais">E2N</abbr> à NOYON(60)</strong></li>
-                            <li><strong><span>Projet e-Commerce : </span></strong><ul class="list-unstyled">
-                                    <li> Création et développement d'un site e-Commerce</li>
-                                    <li>En HTLM5/CSS, Bootstrap, JavaScript, jQuery.</li>
-                                    <li>Réalisé en 3 jours en équipe de 4.</li>
-                                </ul></li>
-                            <li><strong><span>Projet Quiz :</span></strong> Création, développement et mise en ligne d'un Quiz de 16 questions à l'occasion de la journée des droits des femmes</br> En HTLM5/CSS, Bootstrap, JavaScript, jQuery, PHP).</br> Réalisé en 2 jours en équipe de 9 femmes.</li>
-                            <li><strong><span>Projet site en Responsive Web Design (RWD) :</span></strong> Reproduction et développement du site Airbnb en RWD </br> En HTLM5/CSS, Bootstrap. </br>Réalisé en 2 jours en équipe de 4 en qualité de Chef d'équipe.</li>
-                            <li><strong><span>Projet e-Commerce : </span></strong> Création et développement d'un site e-Commerce </br>Technologies utilisées : HTLM5/CSS, Foundation, JavaScript, jQuery, angular JS.</br> Réalisé en 3 jours en équipe de 4.</li>
-                            <li><strong><span>Printemps du code : </span></strong> Animation en binôme d'un atelier de sensibilisation à la programmation avec <a href="https://codecombat.com/" title="site codecombat"> Codecombat</a> et <a href="https://www.codecademy.com/fr" title="site codeCademy"> Codecademy</a> pour des personnes de 18 à 30 ans.</li>
-                        </ul>
-                    </div>
-                </section>
+              <section id="contenuExperience">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expériences en développement et numérique</h2>
+                  <ul class="list-unstyled">
+                    <li><strong><span>Actuellement</span> Développeuse Tiers Maintenance Applicative</strong> pour client secteur Energie, assistance support niveau 2/3 à BUSINESS & DECISION à AMIENS (80)</li>
+                  </ul>
+                  <ul class="list-unstyled">
+                    <li><strong><span>2018</span> Animatrice réseaux sociaux</strong> de la boutique artisanale / gestion vente magasin et boutique en ligne à l'Esat de l'Arche (ARCHE OISE) à TROSLY BREUIL (60)</li>
+                  </ul>
+                  <ul class="list-unstyled">
+                    <li><strong><span>2017</span> Développeuse Web</strong> en formation intensive et immersive 35h/semaine pendant 6 mois à <abbr title="École du Numérique du Noyonnais">E2N</abbr> à NOYON (60)</li>
+                    <li><strong><span>Projet e-Commerce : </span></strong><ul class="list-unstyled">
+                      <li> Création et développement d'un site e-Commerce</li>
+                      <li>En HTLM5/CSS, Bootstrap, JavaScript, jQuery.</li>
+                      <li>Réalisé en 3 jours en équipe de 4.</li>
+                    </ul></li>
+                    <li><strong><span>Projet Quiz :</span></strong> Création, développement et mise en ligne d'un Quiz de 16 questions à l'occasion de la journée des droits des femmes</br> En HTLM5/CSS, Bootstrap, JavaScript, jQuery, PHP).</br> Réalisé en 2 jours en équipe de 9 femmes.</li>
+                    <li><strong><span>Projet site en Responsive Web Design (RWD) :</span></strong> Reproduction et développement du site Airbnb en RWD </br> En HTLM5/CSS, Bootstrap. </br>Réalisé en 2 jours en équipe de 4 en qualité de Chef d'équipe.</li>
+                    <li><strong><span>Projet e-Commerce : </span></strong> Création et développement d'un site e-Commerce </br>Technologies utilisées : HTLM5/CSS, Foundation, JavaScript, jQuery, angular JS.</br> Réalisé en 3 jours en équipe de 4.</li>
+                    <li><strong><span>Printemps du code : </span></strong> Animation en binôme d'un atelier de sensibilisation à la programmation avec <a href="https://codecombat.com/" title="site codecombat"> Codecombat</a> et <a href="https://www.codecademy.com/fr" title="site codeCademy"> Codecademy</a> pour des personnes de 18 à 30 ans.</li>
+                  </ul>
+                </div>
+              </section>
             </div>
             <div class="row">
                 <section id='contenuProjet'>
                     <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projet en cours</h2>
                         <ul class="list-unstyled">
-                            <li>Création d'une association proposant des ateliers numériques pour juniors et séniors</li>
+                            <li>Création d'une association proposant des ateliers numériques pour séniors</li>
                         </ul>
                     </div>
                 </section>
