--- a/competences.html
+++ b/competences.html
@@ -53,7 +53,7 @@
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div>
@@ -64,7 +64,7 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div> <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i></div>
@@ -140,14 +140,19 @@
                         <h3>OUTILS</h3>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                             <div>Ligne commande</div>
-                            <div>Nano</div>
                             <div>Atom</div>
                             <div>NetBeans</div>
                             <div>Git</div>
                             <div>GitHub/Bitbucket</div>
                             <div>LAMP/WAMP</div>
-                            <div>GIMP</div>
+                            <div>GIMP et Photoshop</div>
                             <div>Pencil</div>
+                            <div>ITSM (Service Now)</div>
+                            <div>Citrix</div>
+                            <div>Quality Center</div>
+                            <div>Suite Office</div>
+                            <div>Logiciel ticketing</div>
+                            <div>Wordpress</div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
@@ -159,7 +164,25 @@
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
@@ -169,24 +192,6 @@
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                            </div>
-                            <div><i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                            </div>
-                            <div><i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                            </div>
-                            <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
@@ -201,6 +206,36 @@
                             <div><i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                            </div>
+                            <div><i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
+                                <i class="fa fa-circle" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
                             </div>
