--- a/interet.html
+++ b/interet.html
@@ -43,7 +43,7 @@
                             <li>Internet <i class="fa fa-globe" aria-hidden="true"></i></li>
                             <li>Les nouvelles technologies <i class="fa fa-mobile" aria-hidden="true"></i></li>
                             <li>Peinture à l'huile <i class="fa fa-paint-brush" aria-hidden="true"></i></li>
-                            <li>Travaux Manuels <i class="fa fa-wrench" aria-hidden="true"></i></li>
+                            <li>Bénévolat Arche Oise</li>
                             <li>Chocolat Noir</li>
                         </ul>
                     </div>
