--- a/experiences.html
+++ b/experiences.html
@@ -42,7 +42,7 @@
               <section id="contenuExperience">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expériences en développement et numérique</h2>
                   <ul class="list-unstyled">
-                    <li><strong><span>Actuellement</span> Développeuse Tiers Maintenance Applicative</strong> pour client secteur Energie, assistance support niveau 2/3 à BUSINESS & DECISION à AMIENS (80)</li>
+                    <li><strong><span>2018</span> Développeuse Consultante Tiers Maintenance Applicative</strong> pour client secteur Energie, assistance support niveau 2/3 à BUSINESS & DECISION à AMIENS (80)</li>
                   </ul>
                   <ul class="list-unstyled">
                     <li><strong><span>2018</span> Animatrice réseaux sociaux</strong> de la boutique artisanale / gestion vente magasin et boutique en ligne à l'Esat de l'Arche (ARCHE OISE) à TROSLY BREUIL (60)</li>
@@ -66,7 +66,7 @@
                 <section id='contenuProjet'>
                     <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projet en cours</h2>
                         <ul class="list-unstyled">
-                            <li>Création d'une association proposant des ateliers numériques pour séniors</li>
+                            <li>Création de l'atelier <a href="https://codejup.fr/" title="atelier Code J'Up !"> Code J'Up ! </a>proposant des ateliers numériques pour adultes (Site réalisé via le CMS Wordpress).</li>
                         </ul>
                     </div>
                 </section>
