--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </header>
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><strong>Adresse : </strong><p>TROSLY BREUIL (Oise) - Hauts-de-France<br>50 min Paris Gare du Nord</p>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><strong>Adresse : </strong><p>TROSLY BREUIL (Oise) - Hauts-de-France<br></p>
                     <p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
                     <p><strong>E-mail : </strong><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p>
                     <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/veronique-boulnois/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a><a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
